# ambition-plugins

./: .gitmodules  CMakeLists.txt  README.md  documentation.md  manifest.json
.github/workflows/: main.yml
_mods/couchbase/src/: Couchbase.vala
_mods/engine-scgi/: .gitignore
_mods/engine-scgi/src/: SCGI.vala
_mods/gredis/test/: CMakeLists.txt
_mods/servicething/: documentation.md
_mods/servicething/src/: CMakeLists.txt
_mods/servicething/test/: SerializeJsonTest.vala  TestClasses.vala
_mods/textcaptcha/: manifest.json
_mods/textcaptcha/cmake/: project.cmake
almanna/: manifest.json  meson.build
almanna/src/: AlmannaPlugin.vala  AlmannaSession.vala  AlmannaUtility.vala  meson.build
almanna/test/: AlmannaTest.vala  meson.build
cmake/: FindAmbition.cmake
couchbase/: documentation.md  manifest.json
couchbase/src/: CouchbaseSession.vala
couchbase/test/: CMakeLists.txt  CouchbaseTest.vala
engine-scgi/: .gitignore  manifest.json  meson.build
engine-scgi/src/: SCGI.vala  SCGIPlugin.vala  SCGIUtility.vala  ambition-engine-scgi-0.2.deps  meson.build
engine-scgi/subprojects/: libgscgi.wrap
gredis/: .gitignore  documentation.md
jsonschema/: CMakeLists.txt  manifest.json  meson.build
jsonschema/src/: CMakeLists.txt  meson.build
jsonschema/test/: CMakeLists.txt  meson.build
jsonschema/test/spec/: 3-4-schema-with-nesting.json
servicething/src/: ErrorMessage.vala  ServiceThing.vala
servicething/src/Deserializer/: JSON.vala  JSONNode.vala
src/: CMakeLists.txt  CouchbasePlugin.vala  GRedis.vala  GRedisPlugin.vala  GRedisSession.vala  Helper.vala  JSONSchemaPlugin.vala  Service.vala  ServiceThing.vala  StorableCouchbase.vala  StorableGRedis.vala  ambition-engine-scgi-0.1.1.deps  ambition-plugin-almanna-0.1.0.deps  ambition-plugin-couchbase-0.1.0.deps  ambition-plugin-couchbase-0.1.2.deps  ambition-plugin-couchdb-0.1.1.deps  ambition-plugin-gredis-0.1.0.deps  ambition-plugin-jsonschema-0.1.0.deps  ambition-plugin-textcaptcha-0.1.0.deps
src/Deserializer/: IDeserializer.vala  JSON.vala
src/Serializer/: JSON.vala
test/: CMakeLists.txt  DeserializeJsonTest.vala  GRedisTest.vala  JSONSchemaPlugin.test.vala  ServiceThingTest.vala  TestRunner.vala
test/spec/: 3-4-root-schema-no-subschema.json
textcaptcha/: manifest.json  meson.build
textcaptcha/src/: TextCaptcha.vala  TextCaptchaPlugin.vala  meson.build
textcaptcha/test/: meson.build
twitterbootstrap/: CMakeLists.txt  manifest.json  meson.build
twitterbootstrap/src/: TwitterBootstrapPlugin.vala  meson.build
twitterbootstrap/src/Form/: TBButton.vala  TBCheckboxGroupInput.vala  TBGroupInput.vala  TBPasswordInput.vala  TBRadioGroupInput.vala  TBResetButton.vala  TBSelectGroupInput.vala  TBSubmitButton.vala  TBTextInput.vala  TBTextarea.vala
twitterbootstrap/test/: meson.build
