SET( APGR_VALA_FILES
	GRedis.vala
	GRedisPlugin.vala
	GRedisSession.vala
	StorableGRedis.vala
)

vala_precompile(APGR_VALA_C
	${APGR_VALA_FILES}
PACKAGES
	${APGR_VALA_PACKAGES}
OPTIONS
	${DEFAULT_VALA_OPTIONS}
GENERATE_VAPI
	${PPKGNAME}-${PPKGVERSION}
GENERATE_HEADER
	${PPKGNAME}-${PPKGVERSION})

set(APGR_LIB_PATHS
	${APGR_DEPS_LIBRARY_DIRS}
)
link_directories(${APGR_LIB_PATHS})
add_definitions(${APGR_DEPS_CFLAGS_ALL})

add_library(${PPKGNAME}-${PPKGVERSION} SHARED ${APGR_VALA_C})
target_link_libraries(${PPKGNAME}-${PPKGVERSION} ${APGR_DEPS_LIBRARIES})

install (
	FILES
		${CMAKE_CURRENT_BINARY_DIR}/${PPKGNAME}-${PPKGVERSION}.vapi
		${PPKGNAME}-${PPKGVERSION}.deps
		${CMAKE_CURRENT_BINARY_DIR}/${PPKGNAME}-${PPKGVERSION}.h
	DESTINATION ${CMAKE_INSTALL_PREFIX}
)
install (
	TARGETS ${PPKGNAME}-${PPKGVERSION}
	DESTINATION ${CMAKE_INSTALL_PREFIX}
)
