SET( APCDB_VALA_FILES
	Couch.vala
	CouchPlugin.vala
	Document.vala
	SessionDocument.vala
	StorableCouch.vala
)

vala_precompile(APCDB_VALA_C
	${APCDB_VALA_FILES}
PACKAGES
	${APCDB_VALA_PACKAGES}
OPTIONS
	${DEFAULT_VALA_OPTIONS}
GENERATE_VAPI
	${PPKGNAME}-${PPKGVERSION}
GENERATE_HEADER
	${PPKGNAME}-${PPKGVERSION})

set(APCDB_LIB_PATHS
	${APCDB_DEPS_LIBRARY_DIRS}
)
link_directories(${APCDB_LIB_PATHS})
add_definitions(${APCDB_DEPS_CFLAGS_ALL})

add_library(${PPKGNAME}-${PPKGVERSION} SHARED ${APCDB_VALA_C})
target_link_libraries(${PPKGNAME}-${PPKGVERSION} ${APCDB_DEPS_LIBRARIES})

install (
	FILES
		${CMAKE_CURRENT_BINARY_DIR}/${PPKGNAME}-${PPKGVERSION}.vapi
		${CMAKE_SOURCE_DIR}/couchdb-glib-1.0.vapi
		${PPKGNAME}-${PPKGVERSION}.deps
		${CMAKE_CURRENT_BINARY_DIR}/${PPKGNAME}-${PPKGVERSION}.h
	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/ambition-framework/plugins/${PLUGINNAME}-${PPKGVERSION}/
)
install (
	TARGETS ${PPKGNAME}-${PPKGVERSION}
	DESTINATION ${CMAKE_INSTALL_PREFIX}
)
